_sass/main.scss
@import '../_sass/bourbon/bourbon';
@import 'normalize';
@import 'fonts';
@import 'variables';
@import 'base';
@import 'navigation';
@import 'responsive';

.site-container {
  height: 100%;
  width: 100%;
  @include display(flex);
  @include flex-direction(row);

  > * {
    @include flex(1 100%);
  }
}

.main {
  @include flex(3 0px);
  @include order(1);
}

.sidebar {
  @include order(2);
  @include flex(1 0px);
  @include display(flex);
  @include flex-flow(column);

  > * {
    @include flex(1 100%);
  }
}

header {
  min-height: 50px;
  text-align: center;
  z-index: 100;
}

@media (max-width: $screen-sm-max) {
  .site-container {
    @include flex-direction(column);
  }

  .main,
  .sidebar {
    @include order(0);
  }

  .sidebar {
    display: none;
  }
}

footer {
  background-color: $yellow;
  font-size: 14px;

  a {
    border: 0;
    color: $black;
  }

  ul {
    display: inline;
  }
}

ul.grid {
  @include grid-layout(3);
}

ul.inline li {
  display: inline-block;
}

.social-media li {
  padding: 0 5px;
  font-size: 18px;

  &:last-child {
    padding-right: 0;
  }
}

.call-to-action {
  border: 0;
  color: $red;
  display: inline-block;
  font-size: 22px;
  font-weight: bold;
  margin: 20px auto;

  &:after {
    padding-left: 10px;
    content: '→';
  }
}

.landing-page {
  text-align: center;
}

#home {
  h1 {
    line-height: 1;

    span {
      display: block;
    }
  }
}

#get-in-touch {
  form {
    * {
      @include appearance(none);
      font-size: 20px;
    }

    fieldset {
      width: 70%;
      font-size: 0;
      margin: 0 auto;
      border: 0;
    }

    span {
      display: inline-block;
      width: 50%;
      margin: 0 0 $gutter;
      padding: 0;

      &:nth-of-type(2n) {
        padding-right: $gutter/2;
      }

      &:nth-of-type(2n+1) {
        padding-left: $gutter/2;
      }

      &:first-child {
        padding-left: 0;
        width: 100%;
      }

      input,
      select {
        width: 100%;
      }
    }

    input,
    select,
    textarea {
      background-color: $white;
      border: 0;
      border-radius: 0;
      padding: $gutter;
    }

    textarea,
    input[type="submit"] {
      width: 100%;
      margin: 0 0 $gutter;
    }

    input[type="submit"] {
      background-color: $teal;
      color: $white;
    }
  }
}

#location {
  img {
    height: 300px;
    width: 700px;
  }
}

.mobile-menu {
  background-color: $yellow;
  border-radius: 50%;
  height: 40px;
  padding: 10px;
  text-align: center;
  width: 40px;
  position: absolute;
  top: 5px;
  right: 10px;

  a {
    border: 0;
  }

  i {
    font-weight: bold;
  }
}

